[gd_scene load_steps=18 format=3 uid="uid://duuc1fj30xbqn"]

[ext_resource type="Script" path="res://Scenes/levels/Snake/joueur.gd" id="1_cgcry"]
[ext_resource type="Script" path="res://Scenes/levels/Snake/snake.gd" id="1_ncsu5"]
[ext_resource type="PackedScene" uid="uid://dib0hecl6d06m" path="res://Scenes/levels/Snake/queue.tscn" id="2_b1ofl"]
[ext_resource type="Texture2D" uid="uid://bmq8jtulr7fvh" path="res://Scenes/levels/Snake/Sprite/tileset_snake_20250116110621.png" id="3_kammk"]
[ext_resource type="Script" path="res://Scenes/levels/Snake/point.gd" id="4_oqkf0"]
[ext_resource type="Texture2D" uid="uid://dbg8dx06iihas" path="res://Scenes/levels/Snake/Sprite/Scalpel_20250116114044.png" id="6_tdt1n"]
[ext_resource type="Texture2D" uid="uid://kd78uq6dx6an" path="res://Scenes/levels/Snake/Sprite/tileset_snake_20250116110621 (2).png" id="8_7jeja"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_v3ikl"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_558hh"]
texture = SubResource("CompressedTexture2D_v3ikl")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2jqh6"]
texture = ExtResource("3_kammk")
texture_region_size = Vector2i(40, 40)
0:0/0 = 0
0:1/0 = 0

[sub_resource type="TileSet" id="TileSet_ng3k1"]
tile_size = Vector2i(40, 40)
sources/0 = SubResource("TileSetAtlasSource_558hh")
sources/2 = SubResource("TileSetAtlasSource_2jqh6")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oooso"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ukfhk"]
size = Vector2(1152, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l1202"]
size = Vector2(20, 680)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rdbb5"]
size = Vector2(20, 680)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s3fts"]
size = Vector2(1145, 68)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aopyf"]
size = Vector2(64, 64)

[node name="Snake" type="Node2D"]
script = ExtResource("1_ncsu5")

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2(1.6, 1.6)
tile_set = SubResource("TileSet_ng3k1")
format = 2
layer_0/tile_data = PackedInt32Array(2, 2, 0, 3, 2, 0, 4, 2, 0, 5, 2, 0, 6, 2, 0, 7, 2, 0, 8, 2, 0, 9, 2, 0, 10, 2, 0, 11, 2, 0, 65547, 2, 0, 65548, 2, 0, 65549, 2, 0, 65550, 2, 0, 65551, 2, 0, 65552, 2, 0, 65553, 2, 0, 12, 2, 0, 13, 2, 0, 15, 2, 0, 16, 2, 0, 17, 2, 0, 589824, 2, 0, 524288, 2, 0, 458752, 2, 0, 393216, 2, 0, 327680, 2, 0, 262144, 2, 0, 196608, 2, 0, 131072, 2, 0, 65536, 2, 0, 131089, 2, 0, 131088, 2, 0, 131087, 2, 0, 131086, 2, 0, 131085, 2, 1, 131084, 2, 0, 131083, 2, 1, 131082, 2, 1, 131081, 2, 0, 131080, 2, 1, 196623, 2, 1, 196624, 2, 1, 196625, 2, 0, 196622, 2, 1, 196621, 2, 1, 196620, 2, 1, 196619, 2, 1, 196618, 2, 1, 196617, 2, 0, 196616, 2, 0, 196615, 2, 0, 196614, 2, 1, 262161, 2, 0, 262160, 2, 0, 262159, 2, 1, 262158, 2, 1, 262157, 2, 0, 262156, 2, 0, 262155, 2, 0, 262152, 2, 0, 262151, 2, 0, 262153, 2, 0, 262154, 2, 0, 327694, 2, 0, 327693, 2, 0, 327692, 2, 1, 327691, 2, 1, 327690, 2, 0, 327695, 2, 0, 327696, 2, 0, 327697, 2, 0, 393233, 2, 0, 393232, 2, 0, 393231, 2, 0, 393230, 2, 0, 393229, 2, 0, 393228, 2, 0, 524305, 2, 0, 524304, 2, 0, 524303, 2, 1, 524302, 2, 0, 589841, 2, 0, 589837, 2, 0, 589838, 2, 0, 589839, 2, 0, 589840, 2, 0, 589825, 2, 0, 589826, 2, 0, 589827, 2, 0, 589828, 2, 0, 589829, 2, 0, 458769, 2, 0, 458768, 2, 0, 458767, 2, 0, 458766, 2, 0, 458765, 2, 1, 458764, 2, 1, 458763, 2, 1, 458761, 2, 1, 458760, 2, 0, 458759, 2, 0, 458758, 2, 1, 458757, 2, 1, 458756, 2, 1, 458755, 2, 1, 458754, 2, 1, 458753, 2, 0, 524289, 2, 0, 524290, 2, 0, 524291, 2, 0, 524292, 2, 1, 524293, 2, 1, 524294, 2, 1, 524295, 2, 1, 524296, 2, 1, 524297, 2, 1, 524298, 2, 1, 524299, 2, 1, 524300, 2, 1, 524301, 2, 1, 393227, 2, 0, 393226, 2, 0, 393225, 2, 0, 393224, 2, 0, 393223, 2, 0, 393222, 2, 0, 393221, 2, 0, 393220, 2, 0, 393219, 2, 1, 393218, 2, 1, 393217, 2, 0, 327681, 2, 0, 327682, 2, 1, 327683, 2, 0, 327684, 2, 1, 327685, 2, 1, 327686, 2, 1, 327687, 2, 0, 327688, 2, 0, 327689, 2, 0, 262150, 2, 1, 262149, 2, 1, 262148, 2, 1, 262147, 2, 1, 262146, 2, 1, 262145, 2, 0, 196609, 2, 0, 196610, 2, 0, 196611, 2, 1, 196612, 2, 0, 196613, 2, 1, 131078, 2, 0, 131079, 2, 0, 131077, 2, 0, 131076, 2, 0, 131075, 2, 0, 131074, 2, 0, 131073, 2, 0, 65537, 2, 0, 65538, 2, 1, 65539, 2, 1, 65541, 2, 1, 65542, 2, 1, 65543, 2, 0, 65544, 2, 1, 65545, 2, 1, 65546, 2, 0, 14, 2, 0, 1, 2, 0, 0, 2, 0, 458762, 2, 1, 589830, 2, 0, 589831, 2, 0, 589832, 2, 0, 589833, 2, 0, 589834, 2, 0, 589835, 2, 0, 589836, 2, 0, 65540, 2, 0)

[node name="Joueur" type="CharacterBody2D" parent="."]
z_index = 3
script = ExtResource("1_cgcry")

[node name="Queue" parent="Joueur" instance=ExtResource("2_b1ofl")]

[node name="Sprite2D" type="Sprite2D" parent="Joueur"]
position = Vector2(32, -2)
scale = Vector2(1.6, 1.6)
texture = ExtResource("6_tdt1n")

[node name="Area2D" type="Area2D" parent="Joueur"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Joueur/Area2D"]
position = Vector2(32, 32)
scale = Vector2(0.95, 0.95)
shape = SubResource("RectangleShape2D_oooso")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(576, 320.35)
zoom = Vector2(1, 1.012)

[node name="Mur_haut" type="Area2D" parent="."]
position = Vector2(0, -10.1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mur_haut"]
position = Vector2(576, 0)
shape = SubResource("RectangleShape2D_ukfhk")

[node name="Mur_gauche" type="Area2D" parent="."]
position = Vector2(-10.1, -10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mur_gauche"]
position = Vector2(0, 330)
shape = SubResource("RectangleShape2D_l1202")

[node name="Mur_droite" type="Area2D" parent="."]
position = Vector2(1162, -10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mur_droite"]
position = Vector2(0.1, 330)
shape = SubResource("RectangleShape2D_rdbb5")

[node name="Mur_bas" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mur_bas"]
position = Vector2(575.5, 678)
shape = SubResource("RectangleShape2D_s3fts")

[node name="Point" type="Area2D" parent="."]
position = Vector2(586, 330)
script = ExtResource("4_oqkf0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Point"]
position = Vector2(22, 22)
scale = Vector2(0.95, 0.95)
shape = SubResource("RectangleShape2D_aopyf")

[node name="Sprite2D" type="Sprite2D" parent="Point"]
z_index = 2
position = Vector2(22, 22)
scale = Vector2(1.6, 1.6)
texture = ExtResource("8_7jeja")

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
text = "0"

[connection signal="area_entered" from="Mur_haut" to="Joueur" method="_on_mur_haut_area_entered"]
[connection signal="area_entered" from="Mur_gauche" to="Joueur" method="_on_mur_gauche_area_entered"]
[connection signal="area_entered" from="Mur_droite" to="Joueur" method="_on_mur_droite_area_entered"]
[connection signal="area_entered" from="Mur_bas" to="Joueur" method="_on_mur_bas_area_entered"]
[connection signal="area_entered" from="Point" to="." method="_on_point_area_entered"]
[connection signal="area_entered" from="Point" to="Joueur" method="_on_point_area_entered"]
[connection signal="area_entered" from="Point" to="Point" method="_on_area_entered"]
